# robotquest

./: .gitignore  Api.hs  Game.hs  Main.hs  Nemesis.hs  Plan.md  README.md  README.txt  TODO.txt  Test.hs  botland.cabal  cleanup.hs  ggg.js  package.json
.ggg/: _main.js  dev.js
Botland/: Actions.hs  Control.hs  Game.hs  GameState.hs  Helpers.hs  Middleware.hs  Tick.hs  Types.hs
Botland/Types/: Location.hs  Message.hs  Unit.hs
ai/: app.coffee  curry.coffee  lib.coffee  one.coffee
public/: docs.html  documentation.html  index.html  test.html  viewer.html
public/assets/css/: lib.css  sprites.css  style.css
public/assets/js/: moment.min.js
public/demo/: api.js  chaosbot.html  chaosbot.js  cleanupbot.js  simple.html  viewer.html  viewer.js
public/docs/: docs.css  docs.html
public/viewer/: viewer.css  viewer.html  viewer.js
server/: botland.conf  deploy  setup  setup.sh
test/: Api.hs  FunctionalTests.hs  package.json  test.js
