Name:                botland
Version:             0.1
Synopsis:            REST-based MMO AI Programming Game
Description:         REST-based MMO AI Programming Game
Homepage:            http://seanhess.github.com
Author:              Sean Hess
Maintainer:          seanhess@gmail.com

Category:            Application
Build-type:          Simple

Cabal-version:       >=1.2

Library
  Exposed-modules:    Botland
  Build-depends:      base                      >= 4        && < 5
                    , scotty                    >= 0.2      && < 0.3
                    , hedis                     >= 0.4.1    && < 0.5 
                    , text                      >= 0.11.1   && < 0.12
                    , aeson                     >= 0.6      && < 0.7
                    , wai                       >= 1.0.0    && < 1.1
                    , warp                      >= 1.0.0    && < 1.1 
                    , mtl                       >= 2.0.1    && < 2.1
                    , bytestring                >= 0.9.1    && < 0.10
                    , MissingH                  >= 1.1      && < 1.2
                    , wai-middleware-static     >= 0.0.1    && < 0.1
                    , wai-middleware-headers    >= 0.1      && < 0.2 
                    , safe                      >= 0.3.3    && < 0.4
                    , system-uuid               >= 2.1.1    && < 2.2
                    , datetime                  >= 0.2.1    && < 0.3

