Name:                botland
Version:             0.1
Synopsis:            REST-based MMO AI Programming Game
Description:         REST-based MMO AI Programming Game
Homepage:            http://seanhess.github.com
Author:              Sean Hess
Maintainer:          seanhess@gmail.com

Category:            Application
Build-type:          Simple

Cabal-version:       >=1.2

Executable botland
  Main-is:            Api.hs
  Build-depends:      base                      >= 4        && < 5
                    , scotty                    >= 0.4      && < 0.5
                    , mongoDB                   >= 1.2

                    , text
                    , aeson
                    , mtl 
                    , bytestring 
                    , MissingH  
                    , wai-middleware-static
                    , wai-middleware-headers
                    , safe                 
                    , system-uuid         
                    , datetime           
                    , either-unwrap     
                    , transformers, containers, ghc-prim, compact-string-fix, bson, random, http-types, conduit, resourcet


